# mrisim

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  NEWS  README  config.h.cmake  configure.ac  epm-header.in
coils/: coil.rf  coil_hires.rf  coil_pd_pn2_1mm.rf  coil_t1_intrinsic.rf  coil_t1_pn2_1mm.rf  coil_t2_pn2_1mm.rf
coils/old-style/: coil.rf
demos/movies/: coil.rf  make_mpeg.pl  se.pl  se.seq  sedemo.pl  st.seq  stdemo.pl
doc/: mrisim.man  mrisim.ps  switch.txt
fields/Philips/: qbc_id.mnc.Z  qbc_q450.mnc.Z  qbc_q86.mnc.Z  qhc.mnc.Z
phantoms/avgbrain_53/: README  avgbrain.prm
phantoms/vasco/: README  oldtissue.prm  phantom10.prm
sequences/: pd_ai.seq  pd_icbm.seq  t1_ai.seq  t1_icbm.seq  t1_icbm_avg.seq  t1_icbm_hires.seq  t2_ai.seq  t2_icbm.seq  t2_icbm_avg.seq
sequences/old-style/: sample.seq
src/: README  mrisim3.1.tar.Z
src/minc/: Makefile  chirp.cxx  chirp.h  fourn.c  fourn.h  imincfile.cxx  imincfile.h  iomincfile.cxx  iomincfile.h  mincfile.cxx  mincfile.h  mincicv.cxx  mincicv.h  mriimage.cxx  mriimage.h  mrilabel.cxx  mrilabel.h  mrimatrix.cxx  mrimatrix.h  mriminc.h  mristring.cxx  mristring.h  mrivolume.cxx  mrivolume.h  omincfile.cxx  omincfile.h  time_stamp.c  time_stamp.h
src/mrisim/: Makefile  ParseArgv.c  ParseArgv.h  discrete_label_phantom.cxx  discrete_label_phantom.h  discrete_phantom.cxx  discrete_phantom.h  discrete_rf_phantom.cxx  discrete_rf_phantom.h  fuzzy_label_phantom.cxx  fuzzy_label_phantom.h  fuzzy_phantom.cxx  fuzzy_phantom.h  fuzzy_rf_phantom.cxx  fuzzy_rf_phantom.h  image_snr_coil.cxx  image_snr_coil.h  intrinsic_coil.cxx  intrinsic_coil.h  mriscanner.cxx  mriscanner.h  mrisim.h  mrisim_main.cxx  mrisim_main.h  mrisimargs.cxx  mrisimargs.h  paramfile.cxx  paramfile.h  percent_coil.cxx  percent_coil.h  phantom.cxx  phantom.h  rf_coil.cxx  rf_coil.h  rf_tissue_phantom.cxx  rf_tissue_phantom.h  scanner_output.cxx  scanner_output.h  tissue_phantom.cxx  tissue_phantom.h
src/signal/: Makefile  ce_fast.cxx  ce_fast.h  customseq.cxx  customseq.h  event.cxx  event.h  fast_iso_model.cxx  fast_iso_model.h  ffe.cxx  ffe.h  fisp.cxx  fisp.h  flash.cxx  flash.h  ir.cxx  ir.h  isochromat_model.cxx  isochromat_model.h  pulseseq.cxx  pulseseq.h  quick_model.cxx  quick_model.h  quickseq.cxx  quickseq.h  repeat.cxx  repeat.h  rf_pulse.cxx  rf_pulse.h  sample.cxx  sample.h  se.cxx  se.h  signal.h  spin_model.cxx  spin_model.h  spoiled_flash.cxx  spoiled_flash.h  spoiler.cxx  spoiler.h  (+6 more)
testdir/: CMakeLists.txt
